[package]
name = "kioto-uring-executor"
version = "0.2.0"
authors = ["Kai Mast <kai@kaimast.com>"]
edition = "2021"
repository = "https://github.com/kaimast/tokio-uring-executor"
description = "A simple multi-threaded wrapper around tokio-uring"
license = "MIT"
readme = "README.md"

[dependencies]
tokio-uring = "0.5"
log = "0.4"
rand = "0.8"
parking_lot = "0.12"

[dependencies.tokio]
version="1"
default-features=false
features=["sync"]

[dependencies.kioto-uring-executor-macros]
version="0.2"
path="./executor-macros"

[dev-dependencies.tokio]
version="1"
default-features=false
features=["time"]

[workspace]
members = ["executor-macros"]

[features]
default = ["macros"]
macros = []
