[package]
name = "kioto-uring-executor"
version = "0.3.0-dev"
authors = ["Kai Mast <kai@kaimast.com>"]
edition = "2021"
repository = "https://github.com/kaimast/tokio-uring-executor"
description = "A simple multi-threaded wrapper around tokio-uring"
license = "MIT"
readme = "README.md"

[dependencies]
tokio-uring = { version="0.5", optional=true }
monoio = { version="0.2", optional=true, features=["sync"] }
log = "0.4"
rand = "0.9"
cfg-if = "1"
parking_lot = "0.12"

[dependencies.tokio]
version="1"
default-features=false
features=["sync", "time"]

[dependencies.kioto-uring-executor-macros]
version="0.3.0-dev"
path="./executor-macros"

[dev-dependencies]
env_logger = "0.11"

[workspace]
members = ["executor-macros"]

[features]
default = ["macros", "monoio"]
macros = []
