[package]
name = "kioto-uring-executor-macros"
authors = ["Kai Mast <kai@kaimast.com>"]
version = "0.3.0-dev"
edition = "2021"
repository = "https://github.com/kaimast/tokio-uring-executor"
description = "Macros for kioto-uring-executor"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0", features = ["full"] }
